# eca-bench

./: .gitignore  FINDINGS.md  README.md  pyproject.toml
configs/: calibrate.yaml
eca_bench/: __init__.py  cli.py  config.py  data.py  eca.py  evaluate.py  model.py  tokenization.py  train.py
open_challenge/: challenge.py  verifier.py
prompt/: CHALLENGE.md
scripts/: run_codex.sh  run_gemini.sh  score.sh  setup.sh
